# car-rental-system

./: .gitignore  alembic.ini  install_log.txt  pyproject.toml  requirements.txt  setup.py
migrations/: env.py
migrations/versions/: 071948e4ab55_add_email_column_to_customer.py  4f945ecf4ec0_add_cutomer_id_column_to_user.py  ae181c7c380f_add_status_id_column_to_booking.py  ccc099bc4458_add_total_cost_column_to_booking.py  d4ce8c2ba56e_add_cutomer_id_frign_key_column_to_user.py  f20f09c7127a_add_role_id_column_to_user.py  f28f31d98552_add_rate_per_day_column_to_car.py
scripts/: __init__.py  admin_entry.py  booking_entry.py  car_entry.py  car_rental_entry.py  customer_entry.py  main_entry.py  manage_customer_entry.py
src/common/: constants.py  enums.py
src/domain/entities/: base_entity.py  booking_entity.py  car_entity.py  customer_entity.py  user_entity.py
src/domain/interfaces/: i_base_repository.py  i_booking_repository.py  i_booking_service.py  i_car_repository.py  i_car_service.py  i_common_service.py  i_customer_repository.py  i_customer_service.py  i_user_repository.py  i_user_service.py
src/domain/service/: common_service.py
src/domain/services/: booking_service.py  car_service.py  common_service.py  customer_service.py  user_service.py
src/infrastructure/db/: mysql_db_connection.py
src/infrastructure/models/: base_model.py  booking_model.py  car_model.py  customer_model.py  user.py  user_model.py
src/rental_services/: __init__.py  login.py  login_controller.py  registration_controller.py  service_locator.py  start_up.py  startup.py
(+12 files in other folders)
